master. WebCoreVitals improvements - added missing seo tags, colors contrasts fixed.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,6 +11,13 @@
 
   body {
     overflow-x: hidden;
+
+    input[type="email"],
+    input[type="text"],
+    select:focus,
+    textarea {
+      @apply text-base;
+    }
   }
 
   .atoms-button {
